force-app/main/default/objects/Current_Coverage__c/Current_Coverage__c.object-meta.xml
<CustomObject>
    <description>used by Virtual P&amp;C during needs analysis process and populates the Acord</description>
    <label>Prior Carrier Information/Loss History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prior Carriers Information/Loss History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>