force-app/main/default/objects/Current_Coverage__c/fields/of_Claims__c.field-meta.xml
<CustomField>
    <fullName>of_Claims__c</fullName>
    <label># of Claims</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>