force-app/main/default/objects/Current_Coverage__c/fields/Reserve__c.field-meta.xml
<CustomField>
    <fullName>Reserve__c</fullName>
    <label>Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>